crates/mlrs-algos/tests/ui/predict_before_fit.stderr
error[E0277]: the trait bound `Umap<f32>: mlrs_algos::typestate::Transform<f32>` is not satisfied
  --> tests/ui/predict_before_fit.rs:29:29
   |
29 |     assert_fitted_surface::<Umap<f32, Unfit>>();
   |                             ^^^^^^^^^^^^^^^^ the trait `mlrs_algos::typestate::Transform<f32>` is not implemented for `Umap<f32>`
   |
help: the trait `mlrs_algos::typestate::Transform<f32>` is not implemented for `Umap<f32, Unfit>`
      but it is implemented for `Umap<f32, Fitted>`
  --> src/manifold/umap.rs
   |
   | / impl<F> Transform<F> for Umap<F, Fitted>
   | | where
   | |     F: Float + CubeElement + Pod,
   | |_________________________________^
   = help: for that trait implementation, expected `Fitted`, found `Unfit`
note: required by a bound in `assert_fitted_surface`
  --> tests/ui/predict_before_fit.rs:26:29
   |
26 | fn assert_fitted_surface<T: Transform<f32>>() {}
   |                             ^^^^^^^^^^^^^^ required by this bound in `assert_fitted_surface`
